<resources>
    <string name="app_name">ParentalAdvisor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Password retype</string>
    <string name="regisration">REGISTRATION</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Sign up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="title_activity_maps">Map</string>
    <string name="auth_error">E-mail or password is incorrect</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <!-- Strings related to main menu -->
    <string name="settings">Settings</string>
    <string name="action_list_objects">Controlled persons</string>
    <string name="action_update">Update</string>

    <string name="simple_error">Error</string>
    <string name="title_activity_add_object">New monitoring person</string>
    <string name="phone">Phone</string>

    <string name="activate_object">Activate object</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <string name="object_activation_help">On this phone number has been sent an SMS with a verification code. Please enter it below.</string>
    <string name="object_activate_successfull">Object is activated successfully</string>
    <string name="user_activate_successfull">Your account is activated successfully</string>
    <string name="user_recovery_successfull">New password is sended in SMS message!</string>

    <string name="sign_up_phone_prompt">Phone number</string>
    <string name="sign_up_retype_error">Error: Password and Password Retype are not equals</string>
    <string name="sign_up_blank_error">Error: All fields are required!</string>

    <string name="password_recovery_help_text">Please, enter your E-mail address</string>
    <string name="password_recovery_title">Password recovery</string>

    <string name="my_current_location">My current location</string>
    <string name="title_activity_objects_list">Controlled persons</string>
    <string name="title_activity_monitoring_object">Monitoring person</string>

    <string name="view_on_map">Show on map</string>
    <string name="call">Call</string>
    <string name="show_daily_history">Show daily history</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string name="latitude">Latitude: </string>
    <string name="longtitude">Longtitude: </string>
    <string name="last_connection_time">Last connection: </string>
    <string name="get_current_status">Is online?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="last_location_of_person">Last location of</string>
    <string name="daily_route_of_person">Daily route of</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_enable_monitoring">Enable Object Monitoring</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_change_password">Change password</string>
    <string name="pref_default_display_password"></string>

    <string name="pref_title_change_full_name">Change full name</string>
    <string name="pref_default_display_full_name"></string>

    <string name="pref_title_change_phone">Change phone number</string>
    <string name="pref_default_display_phone"></string>

    <string name="pref_title_notifications">Type of notifications</string>
    <string-array name="pref_notifications_list_titles">
        <item>Push and SMS</item>
        <item>Only Push</item>
        <item>Only SMS</item>
    </string-array>
    <string-array name="pref_notifications_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_category_account">Account</string>
    <string name="pref_category_monitoring">Monitoring</string>

    <string name="logout">Exit</string>
    <string name="logout_help">You will return on login screen</string>

    <string name="title_activity_object_maps">Map</string>

    <string name="more">More information</string>
    <string name="seconds">seconds ago</string>
    <string name="minutes">minutes ago</string>
    <string name="sended">Time:</string>

    <string name="apply_deleting">Are you sure you want to remove an object?</string>
    <string name="yes">Yes</string>
    <string name="successfull">Successfull</string>

    <string name="deleting">Object\'s deleting</string>
    <string name="editing">Object\'s editing</string>
    <string name="save">Save</string>
</resources>
