<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_monitoring">

        <SwitchPreference
            android:defaultValue="true"
            android:key="monitoring"
            android:title="@string/pref_title_enable_monitoring"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_notifications_list_titles"
            android:entryValues="@array/pref_notifications_list_values"
            android:key="notifications_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_notifications"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_account">

        <EditTextPreference
            android:defaultValue="@string/pref_default_display_full_name"
            android:inputType="text"
            android:key="change_full_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:title="@string/pref_title_change_full_name"/>

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_phone"
            android:inputType="text"
            android:key="change_phone"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:title="@string/pref_title_change_phone"/>

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_password"
            android:inputType="textPassword"
            android:key="change_password"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:title="@string/pref_title_change_password"/>

        <Preference android:title="@string/logout"
            android:key="exit"
            android:summary="@string/logout_help"/>

    </PreferenceCategory>

</PreferenceScreen>
