<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:title="@string/action_register"
        tools:context=".views.SignUpActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/regisration"
            android:textSize="30sp"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textColor="@color/colorMainBackground"
            />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/full_name"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/phone_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_phone_prompt"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="phone"
                android:phoneNumber="true"
                android:autoText="false"
                android:autoLink="phone"/>

            <EditText
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password_retype_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password2"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        <Button
            android:id="@+id/signup_apply_but"
            android:text="@string/action_register"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:allowUndo="false"
            android:textColor="@color/colorMainBackground"
            android:textSize="23dp"
            android:typeface="normal"
            android:layout_gravity="top|center_horizontal"
            android:textAlignment="center"
            android:singleLine="true"
            android:padding="7dp"
            android:outlineProvider="background"
            android:longClickable="false"
            android:enabled="true"
            android:focusable="true"
            android:elegantTextHeight="true"
            android:contextClickable="false"
            android:clickable="true"
            android:breakStrategy="simple"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
